Added collaboration features to the api
